--- a/src/public/create-request/create-request.css
+++ b/src/public/create-request/create-request.css
@@ -8,5 +8,5 @@
 }
 
 body{
-  background-color: darkkhaki !important;
+  background: linear-gradient(to top, #86377b 20%, #27273c 80%) no-repeat center center fixed;
 }
