Small background fix

--- a/src/public/login-page/signin.css
+++ b/src/public/login-page/signin.css
@@ -16,6 +16,7 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background: linear-gradient(to top, #86377b 20%, #27273c 80%) no-repeat center center fixed;
+  background-size: cover;
 }
 
 #msg {
