--- a/src/public/create-request/create-request.css
+++ b/src/public/create-request/create-request.css
@@ -9,4 +9,5 @@
 
 body{
   background: linear-gradient(to top, #86377b 20%, #27273c 80%) no-repeat center center fixed;
+  background-size: cover;
 }
