--- a/src/public/create-request/create-request.css
+++ b/src/public/create-request/create-request.css
@@ -7,7 +7,12 @@
   max-width: 7em;
 }
 
+html {
+  height: 100%;
+}
+
 body{
   background: linear-gradient(to top, #86377b 20%, #27273c 80%) no-repeat center center fixed;
   background-size: cover;
+  height: 100%;
 }
