--- a/src/public/manage/manage.css
+++ b/src/public/manage/manage.css
@@ -7,7 +7,11 @@
   margin-left: -15px;
 }
 
+html {
+  height: 100%;
+}
 body{
   background: linear-gradient(to top, #86377b 20%, #27273c 80%) no-repeat center center fixed;
   background-size: cover;
+  height: 100%;
 }
